--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "search-anywhere",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "keywords": ["typescript", "node"],
+  "authors": [
+    {
+      "name": "Azamat Rakhim",
+      "email": "azamat.rakhim@outlook.com"
+    },
+    {
+      
+    }
+  ],
+  "license": "Apache-2.0",
+  "type": "module",
+  "devDependencies": {
+    "typescript":"5.9.2",
+    "jest":"30.0.4"
+  }
 }
