--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "email": "azamat.rakhim@outlook.com"
     },
     {
-      
+      "name":" ",
+      "email":" " 
     }
   ],
   "license": "Apache-2.0",
